feat : route for label and get pet skin image, update swagger
